# mcp-search-server

./: .gitignore  LICENSE  NOTICE  README.md  api_keys.json.example  pyproject.toml  requirements.txt
scripts/: Dockerfile.astra  build-offline.sh
src/mcp_search_server/: __init__.py  config.py  log.py  search.py  server.py  utils.py
src/mcp_search_server/handlers/: dashboard.py  mcp.py
src/mcp_search_server/templates/: dashboard_blue.html  dashboard_orange.html
